# qrh-spx-vix-calibration-cv

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
config/: pilot.yaml
qrh_nn/: arb_check.py  calibration.py  compare_derivatives.py  data_reformat_spxk.py  data_split.py  datapacker.py  dataset.py  dataset_k.py  demo_joint_calibration.py  eval.py  eval_utils.py  hedge_real_spx.py  interp_k.py  model.py  model_k.py  stats.py  train.py  train_arb.py  train_k.py
scripts/: generate_synth_qrh_spx_vix.py  inspect_b.py  sim_paths_cuda.cu
scripts/hedging_data/: discover_exp.py  gather_data.py
src/qrh_sim/: affine_params.py  io_utils.py  kernel.py  parse_utils.py  pricing_utils.py  sim_utils.py
tests/: conftest.py  test_black.py  test_cudasmoke.py  test_datagensmoke.py  test_xismoke.py
